[tool.poetry]
name = "SpatialDIVA"
version = "0.1.0"
description = ""
authors = ["hsmaan <hassaan.maan@mail.utoronto.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.4"
scanpy = "^1.9.8"
scvi-tools = "^1.1.0.post2"
seaborn = "^0.13.2"
torch = "^2.0.0"
ipykernel = "^6.29.2"
wandb = "^0.16.3"
scikit-misc = "^0.3.1"
scikit-learn = "^0.24"
pyitlib = "^0.2.3"
faiss-cpu = "1.9.0"
scib-metrics = "^0.5.1"
jupyter = "^1.0.0"
pytorch-lightning = "^2.0.0"
Cython = "0.29.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
